  . Fixed the filter extension accepting IPv4 octets with a leading 0 as that
    belongs to the unsupported "dotted octal" representation. (Gustavo)
  . Fixed bug #53236 (problems in the validation of IPv6 addresses with leading
    and trailing :: in the filter extension). (Gustavo)
  . Fixed bug #50117 (problems in the validation of IPv6 addresses with IPv4
    addresses and ::). (Gustavo)
    
- GMP extension:
  . Fixed bug #52906 (gmp_mod returns negative result when non-negative is 
    expected). (Stas)
  . Fixed bug #52849 (GNU MP invalid version match). (Adam)
  
- Iconv extension:
  . Fixed bug #52941 (The 'iconv_mime_decode_headers' function is skipping
    headers). (Adam)
  . Fixed bug #52599 (iconv output handler outputs incorrect content type
    when flags are used). (Ilia)
    
- Intl extension:
  . Fixed bug #50590 (IntlDateFormatter::parse result is limited to the integer
    range). (Stas)
    
- Mbstring extension:
  . Fixed bug #53273 (mb_strcut() returns garbage with the excessive length
    parameter). (CVE-2010-4156) (Mateusz Kocielski, Pierre, Moriyoshi)
  . Fixed bug #52981 (Unicode casing table was out-of-date. Updated with
    UnicodeData-6.0.0d7.txt and included the source of the generator program with
    the distribution) (Gustavo).
  . Fixed bug #52681 (mb_send_mail() appends an extra MIME-Version header).
    (Adam)
 
- MSSQL extension:
  . Fixed possible crash in mssql_fetch_batch(). (Kalle)
  . Fixed bug #52843 (Segfault when optional parameters are not passed in to
    mssql_connect). (Felipe)
    
- MySQL extension:
  . Fixed bug #52636 (php_mysql_fetch_hash writes long value into int). 
    (Kalle, rein at basefarm dot no)
    
- MySQLi extension:
  . Fixed bug #52891 (Wrong data inserted with mysqli/mysqlnd when using
    mysqli_stmt_bind_param and value> PHP_INT_MAX). (Andrey)
  . Fixed bug #52686 (mysql_stmt_attr_[gs]et argument points to incorrect type).
    (rein at basefarm dot no)